app_controllers/infrastructure/kubernetes-deployments/services/wazuh/try/elasticsearch-deployment.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      volumes:
        - name: task-pv-storage
          persistentVolumeClaim:
            claimName: task-pv-claim
      containers:
      - name: elasticsearch
        image: wazuh/wazuh-elasticsearch:latest
        ports:
        - containerPort: 9200
        volumeMounts:
        - mountPath: "/var/log/challenge1"
          name: task-pv-storage
