app_controllers/infrastructure/kubernetes-deployments/services/wazuh/try/kibana-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wazuh-kibana
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wazuh-kibana
  template:
    metadata:
      labels:
        app: wazuh-kibana
      name: wazuh-kibana
    spec:
      volumes:
        - name: task-pv-storage
          persistentVolumeClaim:
            claimName: task-pv-claim
      containers:
        - name: wazuh-kibana
          image: 'wazuh/wazuh-kibana:latest'
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 400m
              memory: 1024Mi
          ports:
            - containerPort: 5601
              name: kibana
