app_controllers/infrastructure/kubernetes-deployments/services/wazuh/try/elasticsearch-service.yml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
spec:
  selector:
    app: elasticsearch
  ports:
  - name: api
    targetPort: 9200
    protocol: TCP
    port: 9200
