app_controllers/infrastructure/kubernetes-deployments/services/wazuh/try/kibana-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: default
  labels:
    app: kibana
spec:
  selector:
    app: kibana
  ports:
    - name: kibana
      port: 5601
      targetPort: 5601
