app_controllers/infrastructure/kubernetes-deployments/services/wazuh/try/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - name: web-https
      port: 443
      targetPort: 443
