app_controllers/infrastructure/kubernetes-deployments/services/wazuh/try/wazuh-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wazuh
spec:
  selector:
    app: wazuh
  ports:
  - name: wazuh-udp-1
    targetPort: 1514
    protocol: UDP
    port: 1514
  - name: registration
    targetPort: 1515
    protocol: TCP
    port: 1515
  - name: wazuh-udp-2
    targetPort: 514
    protocol: UDP
    port: 514
  - name: api
    targetPort: 55000
    protocol: TCP
    port: 55000
