app_controllers/infrastructure/kubernetes-deployments/services/wazuh/try/nginx-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/preserve-host: "true"
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.priority: "1"
spec:
  rules:
  - host: nginx
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: web-https
