app_controllers/infrastructure/kubernetes-deployments/services/wazuh/try/wazuh-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wazuh
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/preserve-host: "true"
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.priority: "1"
spec:
  rules:
  - host: wazuh
    http:
      paths:
      - path: /
        backend:
          serviceName: wazuh
          servicePort: api
